shesmu-server/src/test/resources/good/match-with-group.shesmu
Input test;

# this a comment
Define standard_fastq(string s)
  Where workflow == { "BamQC 2.7+" ,3} [ 0 ] 
  Where project == "foo"
  Where path==foo ( file_size )
  Group files = List path By accession, project;

#Comment 
Olive
  standard_fastq("a")#comment
  Run fastqc With 
    memory=4Gi ,#comment
    input = files
  ;
