shesmu-server/src/test/resources/bad/missing-lookup.shesmu
Input test;

Define standard_fastq(string s)
  Where workflow == {"BamQC 2.7+", 3 }[0]
  Where metatype == "chemical/fastq-gzip"
  Where path == nothing(file_size);
